--- a/CodeForGood/index.html
+++ b/CodeForGood/index.html
@@ -7,7 +7,7 @@
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" />
-        <link rel="stylesheet" href="parallaxcss.css" />
+        <link rel="stylesheet" href="css2/parallaxcss.css" />
     </head>
     <body>
         <section>
