--- a/CodeForGood/index.html
+++ b/CodeForGood/index.html
@@ -3,7 +3,7 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8" />
-        <title>CSS3 Parallax by Martin Ivanov (@wemakesitesnet)</title>
+        <title>Happy Hearts Fund</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
         <link href="http://fonts.googleapis.com/css?family=Open+Sans:400,300" rel="stylesheet" />
@@ -65,5 +65,8 @@
                 
             </div>
         </section>
+		<?php
+        	include("footer.php");
+		?>
     </body>
 </html>
